# trust-api

./: .gitignore  Cargo.toml  Containerfile  README.md
.github/workflows/: ci.yaml  containers.yaml  publish.yaml
data/: Containerfile  trusted-gav.json
data/files/: rhsa-2023_1441_fake.json
k8s/api/: deployment.yaml
k8s/guac/: data.yaml  deployment.yaml
src/: guac.rs  index.rs  main.rs  package.rs  sbom.rs  server.rs  snyk.rs  vulnerability.rs
trust-api-model/: Cargo.toml
trust-api-model/src/: lib.rs  pkg.rs  vuln.rs
